# Junkpy

./: .gitignore  README.md  pyproject.toml  setup.py
junkpy/: __init__.py  base.py  dataclasses.py  extensions.py  type_processors.py
src/junkpy/: __init__.py  base.py  type_processors.py
test/: test_autodetect_types.py  test_builtin_forced_types.py  test_custom_classes.py  test_data_load.py  test_non_JSON_syntax.py  test_parser_extension.py  test_recursive_parsing.py  test_threading.py
test/test_files/: test_file_autodetected_types.junk  test_file_builtin_forced_types.junk  test_file_custom_classes.junk  test_file_parser_extensions.junk  test_file_simple.junk  test_file_threads1.junk  test_file_threads2.junk
